--- a/Enrollment.html
+++ b/Enrollment.html
@@ -46,7 +46,7 @@
        </a>
            <nav>
                <ul id="nav">
-                   <li><a href="Homepage.html"> <i class="fa fa-home"></i> Home </a> </li>
+                   <li><a href="index.html"> <i class="fa fa-home"></i> Home </a> </li>
                    <li><a href="About_us.html"> <i class="fa fa-user"></i>About Us</a> </li>
                    <li><a href="Enrollment.html"> <i class="fa fa-check-square-o"></i>Enrollment</a> </li>
                    <li><a href="Contact_us.html"> <i class="fa fa-phone"></i>Contact Us</a> </li>
